# gpujpeg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ZLUDA.md  configure.ac
examples/: decode_to_cuda_pnm.c  decode_to_pnm.c  decode_to_raw_rgb.c  encode.c  encode_raw.c
libgpujpeg/: gpujpeg_common.h  gpujpeg_decoder.h  gpujpeg_encoder.h
src/: gpujpeg_colorspace.h  gpujpeg_common.c  gpujpeg_common_internal.h  gpujpeg_decoder.c  gpujpeg_decoder_internal.h  gpujpeg_encoder.c  gpujpeg_encoder_internal.h  gpujpeg_marker.h  gpujpeg_reader.c  gpujpeg_table.c  gpujpeg_table.h  gpujpeg_util.h  main.c
src/accel/: gpujpeg_accel.c  gpujpeg_accel.h  gpujpeg_device.c
src/accel/cl/: gpujpeg_accel_cl.c  gpujpeg_accel_cl.cpp  gpujpeg_accel_cl.h
src/accel/common/: gpujpeg_dct.kernel  gpujpeg_huffman_decoder.h  gpujpeg_huffman_encoder.h  gpujpeg_huffman_encoder.kernel  gpujpeg_idct.kernel  gpujpeg_postprocessor.kernel  gpujpeg_preprocessor.kernel
src/accel/cpu/: gpujpeg_accel_cpu.cpp  gpujpeg_accel_cpu.h
src/accel/cuda/: gpujpeg_accel_cuda.cu  gpujpeg_accel_cuda.h
src/utils/: image_delegate.c
test/decoder_gltex/: main.c
test/misc/: mt_encode.c
test/opengl_interop/: util.h
test/unit/: run_tests.c
